--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:resource="@xml/network_security_config" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".WatchListActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ProjetAndroid2022">
@@ -29,5 +29,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ResourceActivity"
+            android:exported="false"
+            android:label="@string/app_name"/>
     </application>
 </manifest>
